# umsl-cmp-sci-4500-project-snapshot-2019-03-29

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  example.py  setup.py
cozmonaut/: __init__.py  __main__.py  cli.py
cozmonaut/facelib/: facelib.cpp
cozmonaut/faces/: __init__.py
cozmonaut/friend/: __init__.py  frienddb.py
cozmonaut/friends/: __init__.py  friend.py  frienddb.py
cozmonaut/tasks/: __init__.py  task_delete_friend.py  task_list_friends.py  task_run.py
ext/faces/: CMakeLists.txt
ext/faces/include/faces/: cache.h  encoding.h  recognizer.h  source.h
ext/faces/include/faces/caches/: basic_cache.h
ext/faces/include/faces/sources/: pil_source.h
ext/faces/src/: cache.cpp  common_image.cpp  common_image.h  encoding.cpp  image.h  main.cpp  module.cpp  recognizer.cpp
ext/faces/src/caches/: basic_cache.cpp
ext/faces/src/sources/: pil_source.cpp
facelib/: CMakeLists.txt
facelib/src/: main.cpp
